--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -379,21 +379,18 @@ Since it is known that the that the delays of the radio and DFN links are 10 and
 
 % TODO: anhand des netzwerks ableiten dass die queue aus gründen logarithmisch (und nciht zB quadratisch) wächst
 
-
 TODO: explain packet loss!!
 
 \subsubsection{Identified bottlenecks}
-%Possible spots for bottlenecks are the Main Router's connection to the radio link, and the Access Point or the WLAN itself.
-
-%In fig. \ref{fig:net_throughput}, it can be seen that neither the WLAN nor the radio link throughput reach the radio link's theoretical maximum of 12 Mbit/s.
-
+% TODO: concrete value for max WLAN throughput
+The main bottleneck is the WLAN: as can be seen in fig. \ref{fig:net_throughput}, its throughput stagnates around 10 Mbit/s, staying below the 12 Mbit/s the radio link would theoretically be capable of transmitting. However, even the radio link itself is not fully occupied. One cause for this may be the drop rate of the Main Router that can be seen in fig. \ref{fig:net_throughput} in combination with the increasing session durations shown in fig. \ref{fig:browser_sess_dur}: Until its peak at 20 web browsing laptops, the Main Router is confronted with more traffic caused by HTTP responses and video conference data flowing from the professor to the remote site than it can handle. After 20 clients, the increased session duration has caused an overall smaller number of sessions to be active, resulting in fewer data to be transmitted by the Main Router through the radio link. While this relieves the Main Router's queue, it also decreases the overall throughput of the radio link.
 
 \subsubsection{Maxmimum number of web browsing clients}
 When the video conference is key,the maximum number of web browsing clients is reached when either the average packet loss exceeds the maximum of 5\% or the average delay exceeds the maximum of 100 ms.\\
 Assuming client packet loss is linear starting at 10 clients, the video conference packet loss will exceed its maximum when $\geq$ 90 web browsing clients are present.
 Even at 60 clients, the Client delay does not significantly exceed half of the permitted maximum delay of 100 ms, as can be seen in Fig. \ref{}. When assuming logarithmic growth, unacceptable packet loss rates will occur long before the maximum delay threshold is reached. \\
 
-When taking the students' web browsing experience into account, however, the maximum number of clients is reached far quicker with the current setup. The acceptable response time of 10s, as detailed in \ref{sec:sim_plan} is already reached with \textless 15 clients, as can be seen in fig. \ref{fig:browser_sess_dur}.% TODO: calculate exact number
+When taking the students' web browsing experience into account, however, the maximum number of clients is reached far quicker with the current setup. The acceptable response time of 10s is already reached with \textless 15 clients, as can be seen in fig. \ref{fig:browser_sess_dur}.% TODO: calculate exact number
 
 \subsubsection{QoS improvement suggestions}
  wie kann man die vieo QoS verbessern, wie die browsing QoS?
