add task distribution (prettier)

--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -458,16 +458,18 @@ Additionally, limiting the bandwidth available to each individual user may impro
 \newpage
 
 \section{Distribution of tasks}
-TODO: Aufgabenverteilung aufschlüsseln
 
-Introductory text: Lotte
-Simulation Implementation:  Lotte
-Simulation Execution: Alex
-Simulation Plan text: Alex
-Plotting: Alex
-With CCTV: Alex
-Without CCTV: Lotte
-
+\begin{table}[H]
+\begin{tabularx}{\textwidth}{ l l }
+  \textbf{Simulation Implementation} & Lotte \\
+  \textbf{Simulation Execution} & Alex \\
+  \textbf{Plotting} & Alex \\
+  \textbf{Introductory text} & Lotte \\
+  \textbf{Simulation Plan text} & Alex \\
+  \textbf{Evaluation with CCTV} & Alex \\
+  \textbf{Evaluation without CCTV} & Lotte \\
+\end{tabularx}
+\end{table}
 
 \section{Terminology}
 % this is not how it's done properly, but I don't want to fight with latex anymore right now...
